Opened 6 years ago
Closed 6 years ago
#13136 closed bug (fixed)
[Patch] system/libroot/os/find_paths.cpp: fix memory leak
Reported by: | mt | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | System/libroot.so | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In Get(), memory allocated to 'locations' at line 123 [1] could leak at line 127 [2] if 'locations->IsValid' is not B_OK at line 126 [3].
[1] http://cgit.haiku-os.org/haiku/tree/src/system/libroot/os/find_paths.cpp#n123 [2] http://cgit.haiku-os.org/haiku/tree/src/system/libroot/os/find_paths.cpp#n127 [3] http://cgit.haiku-os.org/haiku/tree/src/system/libroot/os/find_paths.cpp#n126
Attachments (2)
Change History (4)
by , 6 years ago
Attachment: | 0043-find_paths.cpp-fix-memory-leak.patch added |
---|
comment:1 by , 6 years ago
patch: | 0 → 1 |
---|
by , 6 years ago
Attachment: | report-0145d0.html added |
---|
Note:
See TracTickets
for help on using tickets.
Report by Clang Static Analyzer