find_paths.cpp: fix memory leak

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

fixes #13136